fab z-index fix

--- a/friends-trip/src/styles/app.less
+++ b/friends-trip/src/styles/app.less
@@ -17,6 +17,7 @@ ul {
   right: 0;
   bottom: 0;
   margin: 25px;
+  z-index: 1;
 }
 
 .message {
@@ -120,5 +121,13 @@ ul {
 }
 
 .fl-end {
-  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
